--- a/waypoint_nav/config/gps_robot_localization.yaml
+++ b/waypoint_nav/config/gps_robot_localization.yaml
@@ -23,7 +23,7 @@ imu0_config: [false, false, false,
               false,  false,  false,
               false, false, false,
               false,  false,  true,
-              true, false, false]
+              false, false, false]
 imu0_differential: false
 
 odom_frame: odom
