--- a/waypoint_nav/map_files/outdoor_map.yaml
+++ b/waypoint_nav/map_files/outdoor_map.yaml
@@ -1,7 +1,13 @@
 image: outdoor_map.png
-resolution: 0.363
-origin: [-300.0, -100.0, 0.000000]
+resolution: 0.353
+origin: [-294.0, -98.0, 0.000000]
 negate: 0
 occupied_thresh: 0.65
 free_thresh: 0.196
 
+# parking lot
+# origin: [-304.0, -254.0, 0.000000]
+
+# parking lot 
+# 38.9906554
+# longitude: -76.936014
