--- a/waypoint_nav/config/dual_ekf_jackal.yaml
+++ b/waypoint_nav/config/dual_ekf_jackal.yaml
@@ -18,7 +18,7 @@ ekf_local: # Used only for broadcasting odom to base_link transforms
   odom0: /jackal_velocity_controller/odom
   odom0_config: [false, false, false,
                  false, false, false,
-                 true, true, true,
+                 true, true, false,
                  false, false, true,
                  false, false, false]
   odom0_queue_size: 10
@@ -45,8 +45,8 @@ ekf_local: # Used only for broadcasting odom to base_link transforms
 
   imu0: /imu/data
   imu0_config: [false, false, false,
-              false,  false,  true,
-              false, false, false,
+              false,  false,  false,
+              true, false, false,
               false,  false,  true,
               false, false, false]
 
@@ -110,7 +110,7 @@ ekf_global:
   odom0: /jackal_velocity_controller/odom
   odom0_config: [false, false, false,
                 false, false, false,
-                true, true, true,
+                true, true, false,
                 false, false, true,
                 false, false, false]
 
@@ -152,8 +152,8 @@ ekf_global:
 
   imu0: /imu/data
   imu0_config: [false, false, false,
-               false,  false,  true,
-               false, false, false,
+               false,  false,  false,
+               true, false, false,
                false,  false,  true,
                false, false, false]
 
