--- a/waypoint_nav/config/gps_robot_localization.yaml
+++ b/waypoint_nav/config/gps_robot_localization.yaml
@@ -2,13 +2,25 @@
 #
 frequency: 15
 
+# sensor_timeout: 0.1
+print_diagnostics: true # Check /diagnostics topic for sensor issues
+
+debug: false
+
 odom0: /jackal_velocity_controller/odom
 odom0_config: [false, false, false,
                false, false, false,
-               true, true, true,
+               true, true, false,
                false, false, true,
                false, false, false]
+# odom0_config: [false, false, false,
+#                false, false, true,
+#                true, true, false,
+#                false, false, false,
+#                false, false, false]
 odom0_differential: false
+odom0_queue_size: 10
+
 
 odom1: /odometry/gps
 odom1_config: [true, true, false,
@@ -17,14 +29,19 @@ odom1_config: [true, true, false,
                false, false, false,
                false, false, false]
 odom1_differential: false
+odom1_queue_size: 10
 
 imu0: /imu/data
 imu0_config: [false, false, false,
-              false,  false,  true,
-              false, false, false,
+              false,  false,  false,
+              true, false, false,
               false,  false,  true,
               false, false, false]
 imu0_differential: false
+imu0_relative: false
+imu0_queue_size: 110
+
+imu0_remove_gravitational_acceleration: true 
 
 odom_frame: odom
 base_link_frame: base_link
@@ -37,16 +54,16 @@ process_noise_covariance: [0.05,   0,    0,    0,    0,    0,    0,     0,     0
                              0,    0,    0.06, 0,    0,    0,    0,     0,     0,    0,    0,    0,    0,    0,    0,
                              0,    0,    0,    0.03, 0,    0,    0,     0,     0,    0,    0,    0,    0,    0,    0,
                              0,    0,    0,    0,    0.03, 0,    0,     0,     0,    0,    0,    0,    0,    0,    0,
-                             0,    0,    0,    0,    0,    0.01, 0,     0,     0,    0,    0,    0,    0,    0,    0,
+                             0,    0,    0,    0,    0,    0.06, 0,     0,     0,    0,    0,    0,    0,    0,    0,
                              0,    0,    0,    0,    0,    0,    0.025, 0,     0,    0,    0,    0,    0,    0,    0,
                              0,    0,    0,    0,    0,    0,    0,     0.025, 0,    0,    0,    0,    0,    0,    0,
                              0,    0,    0,    0,    0,    0,    0,     0,     0.05, 0,    0,    0,    0,    0,    0,
                              0,    0,    0,    0,    0,    0,    0,     0,     0,    0.01, 0,    0,    0,    0,    0,
                              0,    0,    0,    0,    0,    0,    0,     0,     0,    0,    0.01, 0,    0,    0,    0,
                              0,    0,    0,    0,    0,    0,    0,     0,     0,    0,    0,    0.03, 0,    0,    0,
-                             0,    0,    0,    0,    0,    0,    0,     0,     0,    0,    0,    0,    0.09, 0,    0,
-                             0,    0,    0,    0,    0,    0,    0,     0,     0,    0,    0,    0,    0,    0.09, 0,
-                             0,    0,    0,    0,    0,    0,    0,     0,     0,    0,    0,    0,    0,    0,    0.09]
+                             0,    0,    0,    0,    0,    0,    0,     0,     0,    0,    0,    0,    0.1,   0,   0,
+                             0,    0,    0,    0,    0,    0,    0,     0,     0,    0,    0,    0,    0,   0.1,   0,
+                             0,    0,    0,    0,    0,    0,    0,     0,     0,    0,    0,    0,    0,    0,    0.1]
 
 initial_estimate_covariance:  [1e-9, 0,    0,    0,    0,    0,    0,    0,    0,    0,     0,     0,     0,    0,    0,
                               0,    1e-9, 0,    0,    0,    0,    0,    0,    0,    0,     0,     0,     0,    0,    0,
