--- a/waypoint_nav/map_files/outdoor_map.yaml
+++ b/waypoint_nav/map_files/outdoor_map.yaml
@@ -8,6 +8,13 @@ free_thresh: 0.196
 # parking lot
 # origin: [-304.0, -254.0, 0.000000]
 
+#AV williams
+#origin: [-270.0, -254.0, 0.000000]
+
+
+#iribe
+#origin: [-294.0, -98.0, 0.000000]
+
 # parking lot 
 # 38.9906554
 # longitude: -76.936014
